--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -637,3 +637,11 @@ a:focus, button:focus, input:focus {
     width: 180px;
   }
 }
+
+.viif-video {
+  width: 100%;
+  max-width: 600px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
