--- a/frontend/src/pages/VIIF.css
+++ b/frontend/src/pages/VIIF.css
@@ -179,7 +179,7 @@
 }
 
 .text-slide {
-  background-color: #e6f2ff;
+  background-color: #002244;
   padding: 2rem 1.5rem;
   border-radius: 8px;
   font-size: 1.2rem;
